y.output
Terminals which are not used

   NEG


State 73 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Block '.'

    2 Block: Decl Statement

    3 Decl: ConstDec VarDec ProcDef_list

    4 ConstDec: /* empty */
    5         | TCONST Constdef_list ';'

    6 Constdef_list: Constdef_list ',' ConstDef
    7              | ConstDef

    8 ConstDef: ID '=' NUM

    9 VarDec: TVAR Ident_list ';'
   10       | /* empty */

   11 Ident_list: Ident_list ',' IndexedDec
   12           | IndexedDec

   13 ProcDef_list: ProcDef_list ProcDef
   14             | /* empty */

   15 ProcDef: TPROC ID ';' Block ';'

   16 Statement: Var ASSIGN Expression
   17          | TCALL ID
   18          | TBEGIN Statement_list TEND
   19          | TIF Condition TTHEN Statement
   20          | TIF Condition TTHEN Statement TELSE Statement
   21          | TWHILE Condition TDO Statement
   22          | error
   23          | /* empty */

   24 Statement_list: Statement_list ';' Statement
   25               | Statement

   26 Condition: ODD Expression
   27          | Expression '=' Expression
   28          | Expression NE Expression
   29          | Expression '<' Expression
   30          | Expression '>' Expression
   31          | Expression GE Expression
   32          | Expression LE Expression

   33 Expression: Expression '+' Term
   34           | Expression '-' Term
   35           | '+' Term
   36           | '-' Term
   37           | Term

   38 Term: Term '*' Factor
   39     | Term '/' Factor
   40     | Factor

   41 Factor: Var
   42       | NUM
   43       | '(' Expression ')'

   44 Var: ID
   45    | ID '[' Expression ']'

   46 IndexedDec: ID
   47           | ID '[' NUM ']'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 43
')' (41) 43
'*' (42) 38
'+' (43) 33 35
',' (44) 6 11
'-' (45) 34 36
'.' (46) 1
'/' (47) 39
';' (59) 5 9 15 24
'<' (60) 29
'=' (61) 8 27
'>' (62) 30
'[' (91) 45 47
']' (93) 45 47
error (256) 22
TCONST (258) 5
TVAR (259) 9
TPROC (260) 15
TCALL (261) 17
TBEGIN (262) 18
TIF (263) 19 20
TTHEN (264) 19 20
TELSE (265) 20
TWHILE (266) 21
TDO (267) 21
TEND (268) 18
ODD (269) 26
NE (270) 28
LE (271) 32
GE (272) 31
ASSIGN (273) 16
NEG (274)
ID (275) 8 15 17 44 45 46 47
NUM (276) 8 42 47
UM (277)


Nonterminals, with rules where they appear

$accept (37)
    on left: 0
Program (38)
    on left: 1, on right: 0
Block (39)
    on left: 2, on right: 1 15
Decl (40)
    on left: 3, on right: 2
ConstDec (41)
    on left: 4 5, on right: 3
Constdef_list (42)
    on left: 6 7, on right: 5 6
ConstDef (43)
    on left: 8, on right: 6 7
VarDec (44)
    on left: 9 10, on right: 3
Ident_list (45)
    on left: 11 12, on right: 9 11
ProcDef_list (46)
    on left: 13 14, on right: 3 13
ProcDef (47)
    on left: 15, on right: 13
Statement (48)
    on left: 16 17 18 19 20 21 22 23, on right: 2 19 20 21 24 25
Statement_list (49)
    on left: 24 25, on right: 18 24
Condition (50)
    on left: 26 27 28 29 30 31 32, on right: 19 20 21
Expression (51)
    on left: 33 34 35 36 37, on right: 16 26 27 28 29 30 31 32 33 34
    43 45
Term (52)
    on left: 38 39 40, on right: 33 34 35 36 37 38 39
Factor (53)
    on left: 41 42 43, on right: 38 39 40
Var (54)
    on left: 44 45, on right: 16 41
IndexedDec (55)
    on left: 46 47, on right: 11 12


state 0

    0 $accept: . Program $end

    TCONST  shift, and go to state 1

    $default  reduce using rule 4 (ConstDec)

    Program   go to state 2
    Block     go to state 3
    Decl      go to state 4
    ConstDec  go to state 5


state 1

    5 ConstDec: TCONST . Constdef_list ';'

    ID  shift, and go to state 6

    Constdef_list  go to state 7
    ConstDef       go to state 8


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 9


state 3

    1 Program: Block . '.'

    '.'  shift, and go to state 10


state 4

    2 Block: Decl . Statement

    error   shift, and go to state 11
    TCALL   shift, and go to state 12
    TBEGIN  shift, and go to state 13
    TIF     shift, and go to state 14
    TWHILE  shift, and go to state 15
    ID      shift, and go to state 16

    '.'  reduce using rule 23 (Statement)
    ';'  reduce using rule 23 (Statement)

    Statement  go to state 17
    Var        go to state 18


state 5

    3 Decl: ConstDec . VarDec ProcDef_list

    TVAR  shift, and go to state 19

    $default  reduce using rule 10 (VarDec)

    VarDec  go to state 20


state 6

    8 ConstDef: ID . '=' NUM

    '='  shift, and go to state 21


state 7

    5 ConstDec: TCONST Constdef_list . ';'
    6 Constdef_list: Constdef_list . ',' ConstDef

    ';'  shift, and go to state 22
    ','  shift, and go to state 23


state 8

    7 Constdef_list: ConstDef .

    $default  reduce using rule 7 (Constdef_list)


state 9

    0 $accept: Program $end .

    $default  accept


state 10

    1 Program: Block '.' .

    $default  reduce using rule 1 (Program)


state 11

   22 Statement: error .

    $default  reduce using rule 22 (Statement)


state 12

   17 Statement: TCALL . ID

    ID  shift, and go to state 24


state 13

   18 Statement: TBEGIN . Statement_list TEND

    error   shift, and go to state 11
    TCALL   shift, and go to state 12
    TBEGIN  shift, and go to state 13
    TIF     shift, and go to state 14
    TWHILE  shift, and go to state 15
    ID      shift, and go to state 16

    TEND  reduce using rule 23 (Statement)
    ';'   reduce using rule 23 (Statement)

    Statement       go to state 25
    Statement_list  go to state 26
    Var             go to state 18


state 14

   19 Statement: TIF . Condition TTHEN Statement
   20          | TIF . Condition TTHEN Statement TELSE Statement

    ODD  shift, and go to state 27
    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Condition   go to state 32
    Expression  go to state 33
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 15

   21 Statement: TWHILE . Condition TDO Statement

    ODD  shift, and go to state 27
    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Condition   go to state 37
    Expression  go to state 33
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 16

   44 Var: ID .
   45    | ID . '[' Expression ']'

    '['  shift, and go to state 38

    $default  reduce using rule 44 (Var)


state 17

    2 Block: Decl Statement .

    $default  reduce using rule 2 (Block)


state 18

   16 Statement: Var . ASSIGN Expression

    ASSIGN  shift, and go to state 39


state 19

    9 VarDec: TVAR . Ident_list ';'

    ID  shift, and go to state 40

    Ident_list  go to state 41
    IndexedDec  go to state 42


state 20

    3 Decl: ConstDec VarDec . ProcDef_list

    $default  reduce using rule 14 (ProcDef_list)

    ProcDef_list  go to state 43


state 21

    8 ConstDef: ID '=' . NUM

    NUM  shift, and go to state 44


state 22

    5 ConstDec: TCONST Constdef_list ';' .

    $default  reduce using rule 5 (ConstDec)


state 23

    6 Constdef_list: Constdef_list ',' . ConstDef

    ID  shift, and go to state 6

    ConstDef  go to state 45


state 24

   17 Statement: TCALL ID .

    $default  reduce using rule 17 (Statement)


state 25

   25 Statement_list: Statement .

    $default  reduce using rule 25 (Statement_list)


state 26

   18 Statement: TBEGIN Statement_list . TEND
   24 Statement_list: Statement_list . ';' Statement

    TEND  shift, and go to state 46
    ';'   shift, and go to state 47


state 27

   26 Condition: ODD . Expression

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Expression  go to state 48
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 28

   42 Factor: NUM .

    $default  reduce using rule 42 (Factor)


state 29

   35 Expression: '+' . Term

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '('  shift, and go to state 31

    Term    go to state 49
    Factor  go to state 35
    Var     go to state 36


state 30

   36 Expression: '-' . Term

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '('  shift, and go to state 31

    Term    go to state 50
    Factor  go to state 35
    Var     go to state 36


state 31

   43 Factor: '(' . Expression ')'

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Expression  go to state 51
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 32

   19 Statement: TIF Condition . TTHEN Statement
   20          | TIF Condition . TTHEN Statement TELSE Statement

    TTHEN  shift, and go to state 52


state 33

   27 Condition: Expression . '=' Expression
   28          | Expression . NE Expression
   29          | Expression . '<' Expression
   30          | Expression . '>' Expression
   31          | Expression . GE Expression
   32          | Expression . LE Expression
   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term

    NE   shift, and go to state 53
    LE   shift, and go to state 54
    GE   shift, and go to state 55
    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    '='  shift, and go to state 58
    '<'  shift, and go to state 59
    '>'  shift, and go to state 60


state 34

   37 Expression: Term .
   38 Term: Term . '*' Factor
   39     | Term . '/' Factor

    '*'  shift, and go to state 61
    '/'  shift, and go to state 62

    $default  reduce using rule 37 (Expression)


state 35

   40 Term: Factor .

    $default  reduce using rule 40 (Term)


state 36

   41 Factor: Var .

    $default  reduce using rule 41 (Factor)


state 37

   21 Statement: TWHILE Condition . TDO Statement

    TDO  shift, and go to state 63


state 38

   45 Var: ID '[' . Expression ']'

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Expression  go to state 64
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 39

   16 Statement: Var ASSIGN . Expression

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Expression  go to state 65
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 40

   46 IndexedDec: ID .
   47           | ID . '[' NUM ']'

    '['  shift, and go to state 66

    $default  reduce using rule 46 (IndexedDec)


state 41

    9 VarDec: TVAR Ident_list . ';'
   11 Ident_list: Ident_list . ',' IndexedDec

    ';'  shift, and go to state 67
    ','  shift, and go to state 68


state 42

   12 Ident_list: IndexedDec .

    $default  reduce using rule 12 (Ident_list)


state 43

    3 Decl: ConstDec VarDec ProcDef_list .
   13 ProcDef_list: ProcDef_list . ProcDef

    TPROC  shift, and go to state 69

    $default  reduce using rule 3 (Decl)

    ProcDef  go to state 70


state 44

    8 ConstDef: ID '=' NUM .

    $default  reduce using rule 8 (ConstDef)


state 45

    6 Constdef_list: Constdef_list ',' ConstDef .

    $default  reduce using rule 6 (Constdef_list)


state 46

   18 Statement: TBEGIN Statement_list TEND .

    $default  reduce using rule 18 (Statement)


state 47

   24 Statement_list: Statement_list ';' . Statement

    error   shift, and go to state 11
    TCALL   shift, and go to state 12
    TBEGIN  shift, and go to state 13
    TIF     shift, and go to state 14
    TWHILE  shift, and go to state 15
    ID      shift, and go to state 16

    TEND  reduce using rule 23 (Statement)
    ';'   reduce using rule 23 (Statement)

    Statement  go to state 71
    Var        go to state 18


state 48

   26 Condition: ODD Expression .
   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 26 (Condition)


state 49

   35 Expression: '+' Term .
   38 Term: Term . '*' Factor
   39     | Term . '/' Factor

    '*'  shift, and go to state 61
    '/'  shift, and go to state 62

    $default  reduce using rule 35 (Expression)


state 50

   36 Expression: '-' Term .
   38 Term: Term . '*' Factor
   39     | Term . '/' Factor

    '*'  shift, and go to state 61
    '/'  shift, and go to state 62

    $default  reduce using rule 36 (Expression)


state 51

   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term
   43 Factor: '(' Expression . ')'

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    ')'  shift, and go to state 72


state 52

   19 Statement: TIF Condition TTHEN . Statement
   20          | TIF Condition TTHEN . Statement TELSE Statement

    error   shift, and go to state 11
    TCALL   shift, and go to state 12
    TBEGIN  shift, and go to state 13
    TIF     shift, and go to state 14
    TWHILE  shift, and go to state 15
    ID      shift, and go to state 16

    TELSE  reduce using rule 23 (Statement)
    TEND   reduce using rule 23 (Statement)
    '.'    reduce using rule 23 (Statement)
    ';'    reduce using rule 23 (Statement)

    Statement  go to state 73
    Var        go to state 18


state 53

   28 Condition: Expression NE . Expression

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Expression  go to state 74
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 54

   32 Condition: Expression LE . Expression

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Expression  go to state 75
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 55

   31 Condition: Expression GE . Expression

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Expression  go to state 76
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 56

   33 Expression: Expression '+' . Term

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '('  shift, and go to state 31

    Term    go to state 77
    Factor  go to state 35
    Var     go to state 36


state 57

   34 Expression: Expression '-' . Term

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '('  shift, and go to state 31

    Term    go to state 78
    Factor  go to state 35
    Var     go to state 36


state 58

   27 Condition: Expression '=' . Expression

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Expression  go to state 79
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 59

   29 Condition: Expression '<' . Expression

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Expression  go to state 80
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 60

   30 Condition: Expression '>' . Expression

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '+'  shift, and go to state 29
    '-'  shift, and go to state 30
    '('  shift, and go to state 31

    Expression  go to state 81
    Term        go to state 34
    Factor      go to state 35
    Var         go to state 36


state 61

   38 Term: Term '*' . Factor

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '('  shift, and go to state 31

    Factor  go to state 82
    Var     go to state 36


state 62

   39 Term: Term '/' . Factor

    ID   shift, and go to state 16
    NUM  shift, and go to state 28
    '('  shift, and go to state 31

    Factor  go to state 83
    Var     go to state 36


state 63

   21 Statement: TWHILE Condition TDO . Statement

    error   shift, and go to state 11
    TCALL   shift, and go to state 12
    TBEGIN  shift, and go to state 13
    TIF     shift, and go to state 14
    TWHILE  shift, and go to state 15
    ID      shift, and go to state 16

    TELSE  reduce using rule 23 (Statement)
    TEND   reduce using rule 23 (Statement)
    '.'    reduce using rule 23 (Statement)
    ';'    reduce using rule 23 (Statement)

    Statement  go to state 84
    Var        go to state 18


state 64

   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term
   45 Var: ID '[' Expression . ']'

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57
    ']'  shift, and go to state 85


state 65

   16 Statement: Var ASSIGN Expression .
   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 16 (Statement)


state 66

   47 IndexedDec: ID '[' . NUM ']'

    NUM  shift, and go to state 86


state 67

    9 VarDec: TVAR Ident_list ';' .

    $default  reduce using rule 9 (VarDec)


state 68

   11 Ident_list: Ident_list ',' . IndexedDec

    ID  shift, and go to state 40

    IndexedDec  go to state 87


state 69

   15 ProcDef: TPROC . ID ';' Block ';'

    ID  shift, and go to state 88


state 70

   13 ProcDef_list: ProcDef_list ProcDef .

    $default  reduce using rule 13 (ProcDef_list)


state 71

   24 Statement_list: Statement_list ';' Statement .

    $default  reduce using rule 24 (Statement_list)


state 72

   43 Factor: '(' Expression ')' .

    $default  reduce using rule 43 (Factor)


state 73

   19 Statement: TIF Condition TTHEN Statement .
   20          | TIF Condition TTHEN Statement . TELSE Statement

    TELSE  shift, and go to state 89

    TELSE     [reduce using rule 19 (Statement)]
    $default  reduce using rule 19 (Statement)


state 74

   28 Condition: Expression NE Expression .
   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 28 (Condition)


state 75

   32 Condition: Expression LE Expression .
   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 32 (Condition)


state 76

   31 Condition: Expression GE Expression .
   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 31 (Condition)


state 77

   33 Expression: Expression '+' Term .
   38 Term: Term . '*' Factor
   39     | Term . '/' Factor

    '*'  shift, and go to state 61
    '/'  shift, and go to state 62

    $default  reduce using rule 33 (Expression)


state 78

   34 Expression: Expression '-' Term .
   38 Term: Term . '*' Factor
   39     | Term . '/' Factor

    '*'  shift, and go to state 61
    '/'  shift, and go to state 62

    $default  reduce using rule 34 (Expression)


state 79

   27 Condition: Expression '=' Expression .
   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 27 (Condition)


state 80

   29 Condition: Expression '<' Expression .
   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 29 (Condition)


state 81

   30 Condition: Expression '>' Expression .
   33 Expression: Expression . '+' Term
   34           | Expression . '-' Term

    '+'  shift, and go to state 56
    '-'  shift, and go to state 57

    $default  reduce using rule 30 (Condition)


state 82

   38 Term: Term '*' Factor .

    $default  reduce using rule 38 (Term)


state 83

   39 Term: Term '/' Factor .

    $default  reduce using rule 39 (Term)


state 84

   21 Statement: TWHILE Condition TDO Statement .

    $default  reduce using rule 21 (Statement)


state 85

   45 Var: ID '[' Expression ']' .

    $default  reduce using rule 45 (Var)


state 86

   47 IndexedDec: ID '[' NUM . ']'

    ']'  shift, and go to state 90


state 87

   11 Ident_list: Ident_list ',' IndexedDec .

    $default  reduce using rule 11 (Ident_list)


state 88

   15 ProcDef: TPROC ID . ';' Block ';'

    ';'  shift, and go to state 91


state 89

   20 Statement: TIF Condition TTHEN Statement TELSE . Statement

    error   shift, and go to state 11
    TCALL   shift, and go to state 12
    TBEGIN  shift, and go to state 13
    TIF     shift, and go to state 14
    TWHILE  shift, and go to state 15
    ID      shift, and go to state 16

    TELSE  reduce using rule 23 (Statement)
    TEND   reduce using rule 23 (Statement)
    '.'    reduce using rule 23 (Statement)
    ';'    reduce using rule 23 (Statement)

    Statement  go to state 92
    Var        go to state 18


state 90

   47 IndexedDec: ID '[' NUM ']' .

    $default  reduce using rule 47 (IndexedDec)


state 91

   15 ProcDef: TPROC ID ';' . Block ';'

    TCONST  shift, and go to state 1

    $default  reduce using rule 4 (ConstDec)

    Block     go to state 93
    Decl      go to state 4
    ConstDec  go to state 5


state 92

   20 Statement: TIF Condition TTHEN Statement TELSE Statement .

    $default  reduce using rule 20 (Statement)


state 93

   15 ProcDef: TPROC ID ';' Block . ';'

    ';'  shift, and go to state 94


state 94

   15 ProcDef: TPROC ID ';' Block ';' .

    $default  reduce using rule 15 (ProcDef)
